--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/sherdog/popurace#readme",
   "dependencies": {
-    "ejs": "^2.6.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.6.0",
+    "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   }
 }
