--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jade-bootstrap": "^1.0.14",
     "mongoose": "^5.6.0",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
