--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jade-bootstrap": "^1.0.14",
     "mongoose": "^5.6.0",
     "pug": "^2.0.3",
+    "express-session": "1.15.5",
     "socket.io": "^2.2.0"
   }
 }
