--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.0.0",
     "express": "^4.17.1",
+    "express-session": "1.15.5",
     "jade-bootstrap": "^1.0.14",
     "mongoose": "^5.6.0",
     "pug": "^2.0.3",
-    "express-session": "1.15.5",
     "socket.io": "^2.2.0"
   }
 }
