--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./app/server.js"
+    "start": "nodemon ./app/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "express-session": "1.15.5",
     "jade-bootstrap": "^1.0.14",
     "mongoose": "^5.6.0",
+    "nodemon": "^1.19.1",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   }
